--- a/Veterinaria/src/main/resources/application.properties
+++ b/Veterinaria/src/main/resources/application.properties
@@ -16,4 +16,8 @@ spring.mvc.view.suffix= .jsp
 spring.mvc.view.prefix= /WEB-INF/vistas/
 
 
-server.servlet.session.timeout = 1m
+server.servlet.session.timeout = 20m
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.enabled=true
