--- a/Veterinaria/src/main/resources/application.properties
+++ b/Veterinaria/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/veterinaria_final?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
